--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Jujutsu Kaisen</title>
+    <title>Jujutsu Kaissen</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
